# behavior-qd

./: .gitignore  README.md  claude.md  output.txt  pyproject.toml  sample_run.sh  seed_prompts.csv
rubrics/: sycophancy.jinja  sycophancy_freeform.jinja
scripts/: debug_archive.py  debug_templates.py
src/behavior_qd/: __init__.py  archive.py  cli.py  config.py  conversation.py  embeddings.py  evaluation.py  multi_turn.py  rubric.py  scheduler.py  visualization.py
src/behavior_qd/emitters/: __init__.py  base.py  continuation.py  embedding.py  sampler.py
src/behavior_qd/templates/: continuation_sampler.jinja  judge.jinja  judge_conversation.jinja  rubric_base.jinja  rubric_freeform_generator.jinja  rubric_generator.jinja  rubric_structured.jinja  sampler.jinja
